--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   }
   
   /* Header */
-  .header {
+.header{
     background-color: #ff6600;
     color: white;
     position: fixed;
@@ -37,7 +37,7 @@ body {
     margin-right: 20px;
   }
   
-.navbar ul li a {
+.navbar ul li a{
     color: white;
     text-decoration: none;
     font-size: 16px;
@@ -68,8 +68,122 @@ body {
   
   }
   
-.user-actions img{
+  .user-actions img{
     width: 24px;
     height: 24px;
     color: #fff;
   }
+
+
+  /* Product Grid */
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+    margin: 100px auto 0; 
+    width: 90%;
+    
+  }
+  
+  /* Product Card */
+  .product-card{
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    
+  }
+  
+.product-card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Product Image Section */
+.product-image {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    background: #f4f4f4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+.product-image img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    border-bottom: 1px solid #ddd;
+  }
+  
+.badge{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 8px;
+    font-size: 12px;
+    color: #fff;
+    border-radius: 3px;
+  }
+  
+.badge.discount{
+    background-color: #ff0000; 
+  }
+  
+.badge.sustainability {
+    background-color: #008000; 
+    top: 40px; /
+  }
+  
+  /* Product Info Section */
+  .product-info{
+    padding: 15px;
+    text-align: left;
+  }
+  
+.product-info .brand{
+    display: block;
+    font-size: 12px;
+    color: #888;
+  }
+  
+.product-info h3{
+    margin: 10px 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+  }
+  
+.price{
+    font-size: 14px;
+    color: #ff0000;
+    font-weight: bold;
+    
+  }
+  
+.price .original{
+    text-decoration: line-through;
+    margin-left: 10px;
+    color: #999;
+  }
+  
+ /* Wishlist Button */
+.wishlist{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: #ff0000;
+    font-size: 20px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+.wishlist:hover{
+    transform: scale(1.2);
+  }
+  
