--- a/css/style.css
+++ b/css/style.css
@@ -186,4 +186,25 @@ body {
 .wishlist:hover{
     transform: scale(1.2);
   }
+
+/* Footer */
+.footer {
+  background: #222;
+  color: #fff;
+  padding: 20px 0;
+  
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+  ;
+
+}
+.footer .socials a {
+  display: inline-block;
+  margin: 5px;
+ 
+}
   
